--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Design Gravitas</title>
+  <meta name="description" content="Design Gravitas is a Web Design, Web Development and Search Engine Optimization Company specializes in Designing, Developing and Deploying SEO optimized business websites.">
+
+  <!-- light favicons starting below -->
+  <link rel="icon" href="./src/assets/light-favicon-180x180.svg" type="image/svg+xml" media="(prefers-color-scheme: light)">
+  <!-- light favicons ending below -->
+
+
+
+  <!-- Dark favicons starting below -->
+  <link rel="icon" href="./src/assets/dark-favicon-180x180.svg" type="image/svg+xml" media="(prefers-color-scheme: dark)">
+  <link rel="icon" sizes="32x32" href="./src/assets/dark-favicon-32x32.png" type="image/png" media="(prefers-color-scheme: dark)">
+  <link rel="icon" sizes="16x16" href="./src/assets/dark-favicon-16x16.png" type="image/png" media="(prefers-color-scheme: dark)">
+  <link rel="apple-touch-icon" href="./src/assets/dark-apple-favicon-180x180.png" type="image/png" sizes="180x180">
+  <link rel="mask-icon" href="./src/assets/safari-pinned-tab.svg" color="#1E90FF" type="image/svg+xml">
+  <!-- Dark favicons ending below -->
+
+  <link rel="canonical" href="https://www.designgravitas.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Optimization for PageSpeed Insights starting below -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Gruppo&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" onload="this.onload=null; this.rel='stylesheet'" crossorigin="anonymous">
   <noscript><link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet"></noscript>
-    <title>Design Gravitas</title>
   </head>
   <body>
     <div id="root"></div>
