--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- Dark favicons ending below -->
 
   <link rel="canonical" href="https://www.designgravitas.com">
+  <meta name="robots" content="noindex">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Optimization for PageSpeed Insights starting below -->
