--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
   <link rel="apple-touch-icon" href="./src/assets/dark-apple-favicon-180x180.png" type="image/png" sizes="180x180">
   <link rel="mask-icon" href="./src/assets/safari-pinned-tab.svg" color="#1E90FF" type="image/svg+xml">
   <!-- Dark favicons ending below -->
-
+  <style>
+    *, *::before, *::after{
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  </style>
+  <link rel="stylesheet" href="./src/styles/baseStyles.css">
   <link rel="canonical" href="https://www.designgravitas.com">
   <meta name="robots" content="noindex">
     <link rel="preconnect" href="https://fonts.googleapis.com">
